Remove detailed time semantics
